# xsense

./: Dockerfile  README.md  main.py  pyproject.toml
bot/: fetcher.py
config/: settings.py
features/: aggregator.feature  fetcher.feature
src/xsense/: __init__.py
tests/step_definitions/: test_aggregator.py  test_fetcher.py
